updated all notebooks and analysis report

--- a/results/report.ipynb
+++ b/results/report.ipynb
@@ -4,211 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Structure\\\n",
-    "INtro\n",
-    "\n",
-    "Collection period\n",
-    "2016 to 2024\n",
-    "\n",
-    "'Authors'\n",
-    "'Author full names',\n",
-    "'Title',\n",
-    " 'Year', \n",
-    "'Source title', \n",
-    "'Cited by',\n",
-    " 'Authors with affiliations',\n",
-    " 'Author Keywords',\n",
-    " 'Language of Original Document'\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "·  How has the distribution of papers across different conferences changed over the years, and are there emerging or declining venues? \n",
-    "\n",
-    "·  What are the patterns of collaboration between institutions based on author affiliations, and which institutions are the most active contributors? \n",
-    "\n",
-    "·  What is the geographical diversity of research contributions, analyzing author affiliations by country/region over time? \n",
-    "\n",
-    "·  How has the average number of authors per paper evolved across different conferences and years? \n",
-    "\n",
-    "·  Which institutions show the strongest partnerships in terms of co-authored papers? \n",
-    "\n",
-    "·  Are there identifiable trends in research topics based on paper titles using text analysis? \n",
-    "\n",
-    "\n",
-    "·  What is the rate of single-institution versus multi-institution collaborative papers, and how has this changed over time? \n",
-    "\n",
-    "·  How does the publication output vary seasonally across different conferences? \n",
-    "\n",
-    "·  Which authors show the most consistent publication patterns across multiple conferences? \n",
-    "\n",
-    "·  What is the distribution of papers between academic, industry, and mixed academic-industry affiliations?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Broad overview\\\n",
-    "- Publications growth rate year on year\\\n",
-    "- Average authors per paper\\\n",
-    "- Prolific authors by topic\n",
-    "- Saturation of topics- Number of papers produced\n",
-    "- Popular topics over time - Popular topics each year\n",
-    "- Single author publication rate year over year\n",
-    "- average number of publications per author international\n",
-    "-  average keywords length\n",
-    "\n",
-    "- Total number of countries represented \n",
-    "- Total number of institutions\n",
-    "- Total number of references\n",
-    "- Documents/publications per language\n",
-    "- Total number of authors\n",
-    "- Total single authored vs multi authored\n",
-    "- Average citations per document\n",
-    "\n",
-    "\n",
-    "Country level\\\n",
-    "- Country share of publications year by year\\\n",
-    "Count of publications by year for each country\n",
-    "\n",
-    "- countries with most author affiliations on the proceedings papers in x conference series by year\n",
-    "\n",
-    "- Popular topics/fields by continent/country\n",
-    "\n",
-    "- trends in annual number of conferences hosted by country\n",
-    "- average number of publications per author by instituion/country\n",
-    "\n",
-    "- average publications per year by country\n",
-    "\n",
-    "- average citations\n",
-    "\n",
-    "Conference level\\\n",
-    "Count of publications per conference\\\n",
-    "Count of publishing authors attendance per year\\\n",
-    "Number of first time authors year to year\n",
-    "\n",
-    "\n",
-    "Institution level\\\n",
-    "Prolific authors each year by institution\\\n",
-    "\n",
-    "Count of participating authors by institution\\\n",
-    "\n",
-    "Counts of conferences attended per year by institution\n",
-    "\n",
-    "top 10 institutions with highest average author publications\n",
-    "\n",
-    "average publications per year by institution\n",
-    "\n",
-    "average citations\n",
-    "\n",
-    "Relationships\\\n",
-    "- Relationship between hosting a conference in country and output\n",
-    "\n",
-    "- how much of a barrier to publication rates is international travel? Does hosting conferences in home country significantly improve publication rates?\n",
-    "\n",
-    "\n",
-    "- What influence do conference publications have?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ideas\n",
-    "Structure\n",
-    "Organize the analysis section into parts using overarching questions that categorize the guiding questions\n",
-    "eg Part one - general trends and metrics, part two - case studies, part three - relationships\n",
-    "\n",
-    "Data\n",
-    "Talk about WoS coverage, categorizations\n",
-    "\n",
-    "\n",
-    "Analysis\n",
-    "Forming groups based on patterns/trends in output/some metric\n",
-    "After noticing a trend, using some kind of hypothesis testing to explore relatioxnships between variables that might explaine the trend\n",
-    "\n",
-    "clusters based on locations of collaborators and proportion of internaitionally co-authored papers\n",
-    "\n",
-    "\n",
-    "link between the state of a country’s development and the ratio of the number of its doctoral students to the number of its publications"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "BACKGROUND\\\n",
-    "What is a Citation index\n",
-    "All these databases comprise research contributions published in a variety of academic sources, most importantly journals, books and conference proceedings.\n",
-    "\n",
-    "There is broad variance in the relative importance of proceedings papers depending on the field of study.\n",
-    "Computer science has also been identified as a field in which conference proceedings are a major venue (Bar-Ilan 2010) for disseminating research findings.\n",
-    "\n",
-    "\n",
-    "\n",
-    "MOTIVATION\\\n",
-    "Those who evaluate individuals for recruitment, academic promotion, or research grant awards increasingly use some form of quantitative assessment of their publication output and citation impact when taking decisions. \n",
-    "\n",
-    "The contribution of conference papers to the major citation indexes has not yet been well documented and this is the first topic addressed in this study.\n",
-    "Therefore, bibliometric studies that are well done can build firm foundations for advancing a field in novel and meaningful ways—it enables and empowers scholars to (1) gain a one-stop overview, (2) identify knowledge gaps, (3) derive novel ideas for investigation, and (4) position their intended contributions to the field.\n",
-    "\n",
-    "\n",
-    "METHODOLOGY\\\n",
-    "The method followed for analyis was as follows:\n",
-    "First, publications were extracted from the databases and organised by document type and country. Proceedings papers were compared with all document types to determine the proportion of conference papers published by authors in each country. The second step was to analyse the patterns from each of the ten ASEAN countries and group them into 4 broad clusters based on distinctive publishing behaviour\n",
-    "\n",
-    "Data for the bibliometric studies was extracted from in-house versions of the WoS, Scopus and Dimensions databases hosted by CWTS at Leiden University.\n",
-    "\n",
-    "The CWTS version of WoS comprises 5 citation indices; the Science Citation Index Expanded (SCIE), Social Sciences Citation Index (SSCI), Arts & Humanities Citation Index (A&HCI), Conference Proceedings Citation Index—Science (CPCI-S) and the Conference Proceedings Citation Index—Social Sciences & Humanities (CPCI-SSH) and is collectively referred to as WoS 5-ed meaning five editions. Neither the Book Citation Index (BkCI) nor the Emerging Sources Citation Index (ESCI) were included in the study because they are not hosted in the system. The extraction includes records up to the end of 2019, which allows fairly reliable study of all years up to and including 2018. The data for 2019 was not complete and therefore results for that year are not presented in the study.\n",
-    "\n",
-    " Scopus data were extracted in May 2019 and Dimensions data in June 2019 with the expectation that data for all years up to 2018 would be reliable enough to use in the study.\n",
-    "\n",
-    " The papers used in this study were those with document types ‘proceedings paper’ and ‘proceeding’ from Scopus and Dimensions respectively, and all papers in the CPCI for WoS\n",
-    "\n",
-    "The analysis excluded editorials, errata, letters, and other materials that do not typically present new scientific data, theories, methods, apparatuses, or experiments. The analysis also excluded working papers and preprints, which typically have not yet been peer reviewed\n",
-    "\n",
-    "were used for determining publication output by region, country, or economy through fractional counting and international collaborations through whole counting\n",
-    "\n",
-    "\n",
-    "ANALYSIS\\\n",
-    "We studied global trends and a regional case study to determine the relative representation of conference proceedings in the global scholarly literature using the Web of Science, Scopus, and Dimensions. We designed our case study of ten Southeast Asian countries to uncover conspicuous publishing patterns obscured by global average figures. As a result, we discovered that \n",
-    "\n",
-    "The conclusion suggests that conference proceedings are increasingly indexed by major databases, and that scholars might have found advantage in publishing conference papers that were quicker and easier to publish than journal articles or book chapters. Our study is relevant to policy makers in the area of research evaluation because it highlights potential changes in academic publishing behaviour by those being assessed\n",
-    "\n",
-    "The clustering exercise revealed sub-regional trends with the ASEAN countries. By far the most interesting country for further study was Indonesia. Its steep and sustained increase in conference publishing (Fig. 10) deviated so much from the global pattern that we investigated 2 potential explanations\n",
-    "\n",
-    "Global trends hide lots of interesting dynamics at the level of individual countries and as the second topic addressed by our paper, we include a case study comprising the ten countries of the Southeast Asian Nations (ASEAN).\n",
-    "\n",
-    "Each country displayed a different pattern in conference proceedings output which were grouped into 4 clusters, and the discussion presents some possible reasons for the differences. Such reasons include database coverage, the influence of national policy on the behaviour of scholars, and the location of the conference.\n",
-    "\n",
-    "The second part of the study focused on trends specific to\n",
-    "\n",
-    "We looked within the country-level findings to try to cluster countries together that exhibited similar conference proceedings publishing patterns. For instance, countries which showed increased conference output to a greater extent than the regional trend could be clustered together, while those countries whose conference publishing declined would be another cluster. A third cluster was for countries which followed the regional trend, and yet a fourth was for countries whose output was too low to assign to any other cluster with confidence.\n",
-    "\n",
-    "A comparison of ASEAN conference proceedings between WoS, Scopus and Dimensions (Fig. 3) demonstrated some similarity with the global pattern, specifically the higher proportions of conference papers in the WoS and the lowest share in Dimensions.\n",
-    "\n",
-    "In the following 7 years, the share of conference papers rose from 23 to 80% of total annual output (Fig. 10).\n",
-    "\n",
-    "In the other 5 series Indonesia published more conference papers than any other country in the world in 2018. This is a notable achievement when just 5 years earlier, the country ranked between 17th and 41st in the world and did not publish any papers at all in one of the series.\n",
-    "\n",
-    "The combination of government investment in science, ministry guidelines incentivising publishing, and academics’ preference for conference proceedings are the likely cause of the increased number of locally hosted conferences.\n",
-    "\n",
-    "This report presents data on research publication output by region, country, or economy and scientific field; impact measures; and international collaboration. The first section examines comparative region, country, or economy data on publication output across science and engineering (S&E) fields and includes a sidebar on federal funding acknowledgments. The second section provides an analysis of scientific impact as measured by bibliographic citations in research publications. The third section focuses on collaboration among researchers in the United States and those in other regions, countries, or economies through examining coauthoring and citation patterns. This section also includes a sidebar on the artificial intelligence (AI) publication output and collaboration network.\n",
-    "\n",
-    " Because research activities are complex and multifaceted processes, the knowledge and social benefits that they produce are difficult to measure directly. Bibliometric data, including publications and citations, provide invaluable indicators of research output due to their ubiquity across regions, countries, or economies and time. Nonetheless, bibliometric analyses of publication and citation data remain proxy measures for the knowledge and social benefits produced by research activities, so they carry certain limitations\n",
-    "\n",
-    "LIMITATIONS\\\n",
-    "The changes in proportions of conference proceedings by different countries over time might be partially explained by the natural expansion of any single database over time.\n",
-    "\n",
-    "These nuances in publication behaviour, changes in documentation types and evolution of the WoS coverage over time mean that any study of publications is susceptible to an element of misinterpretation of the results owing to the idiosyncrasies of the database\n",
-    "\n",
-    "It is worth considering that Indonesia’s increased conference representation in the WoS and Scopus might be due simply to the fact that these databases have added a number of conference series that contained large numbers of Indonesian papers prior to incorporation. In order to test this explanation, we looked at the 6\n",
-    "\n",
-    "Even with robust coverage and filtering, bibliometric data may retain biases or gaps in coverage, including a bias toward English-speaking regions, countries, or economies. In terms of interpretability, longer-term trends are the best way to view publications-related data. Year-to-year differences may be due to the process by which the information is indexed"
+    "[Github Repository](https://github.com/Joshua-Quartey/Visualizing-Research-Trends-in-AI-Conference-Proceedings.git)"
    ]
   },
   {
@@ -344,7 +140,7 @@
     "The African and mixed continent collaborations contribute the lowest share of total annual publications. Each continent in the lower bands however show different fluctuations in output. All collaboration trends however did not show any noticeable shange caused by the COVID 19 pandemic. This might just be due to the scale at which these observations are being made.\n",
     "\n",
     "\n",
-    "These trends reveal patterns ripe for furtherinvestigation into publishing patterns. For instance, continents/countries which showed increased conference output to a greater extent than the global trend could be clustered together to investigate their deviation.\n",
+    "These trends reveal patterns ripe for further investigation into publishing patterns. For instance, continents/countries which showed increased conference output to a greater extent than the global trend could be clustered together to investigate their deviation.\n",
     "\n",
     "## Conclusion\n",
     "The observed trend in the global increase in publication output of conference proceedings can be due to a combination of government investment in science, ministry guidelines incentivising publishing, or academics’ preference for conference proceedings considering the large period under investigation.\n",
